css/queries.css
/* rem and em do not depend on html font-size in media queries
1rem = 1em =16px */


/* ***************** */
/* below 1344 px(smaller desktop)
1344/16=84 */
/* ***************** */
@media(max-width: 84em){
  .hero{
    max-width: 120rem                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          
  }
}
/* ***************** */
/* below 1200 px(landscape tablets)
1344/16=75 */
/* ***************** */
@media(max-width:75em){
  .html{
    /* 9px/16px */
    font: size 56.25%;
  }
  .grid{
    column-gap: 4.8rem;
    row-gap: 9.6rem;
  }
  .heading-secondary{
    font-size:3.0rem;
    margin-bottom: 8.0rem;
  }
  .heading-tertiary{
    font-size:2.0rem ;
  }
  .navbar{
    padding: 0 9.8rem;
  }
  .logo-name{
    font-size: 2.4rem;
  }
  .hero{
    gap: 8.0rem;
    padding: 0 9.6rem;
  } 
  .container{
    padding: 0 2.4rem;
  }
}
  /* ***************** */
/* below 944 px(tablets)
944/16=75 */
/* ***************** */
@media(max-width:59em){
  .html{
    /* 8px/16px= 0.5 50% */
    font-size: 50%;
  }
  .hero{
    grid-template-columns: 1fr;
    gap: 3.2rem;
}
.section-hero{
  padding: 6.4rem 0 6.4rem 0;
}
.hero-description{
  margin-bottom: 3.2rem;
}
.grid{
  column-gap: 3.2rem;
  row-gap: 4.8rem;
}

  .project-img{
    width: 80%;
  }
 .hero-text-box {
  text-align: left;
 }
 .hero-img-box{
  text-align: center;
 }
  .heading-secondary{
    font-size: 2.4rem;
    margin-bottom: 6.4rem;
  }
  .heading-tertiary{
    font-size:1.8rem;
  }
  .grid--2cols{
    grid-template-columns:1fr;
  }
  .card-img-box{
    text-align:center;
  }
  .text-box{
    text-align: left;
    padding: 0 9.6rem 0 9.6rem;
  }
  
  .project-description{
    font-size: 1.6rem;
    line-height: 2.0rem;
    margin-bottom: 4.8rem;
}
.about-me-img{
  margin-bottom: 4.8rem;
}
.about-me{
  grid-template-columns: 1fr;
  margin-top: 6.4rem;
}
.introduction{
  text-align: left;
    padding: 0 9.6rem 0 9.6rem;
    margin-bottom: 6.4rem;
}
.footer-menu-list{
  margin-top: 6.4rem; 
}
}
  /* ***************** */
/* below 700 px(smaller tablet)
704/16=44 */
/* ***************** */

@media(max-width:44em){
  .html{
    /* 7px/16px= 0.43 43% */
    font-size: 43%;
  }
    .primary-button {
      width: 13rem; 
      height: 4rem; 
      font-size: 1.4rem; 
      font-weight: 500;
      line-height: 1.5rem;
      display: inline-block; 
      text-align: center;
      white-space: normal;
      background-color: #fafafa;
      color: #000;
      border: 0.2rem solid #000; 
      border-radius: 1rem;
      text-decoration: none;
      box-shadow: 0 0.3rem #fc9925; 
      text-decoration: none;
  }
  .heading-primary{
   font-size: 2.4rem;
  }
  .heading-secondary{
    font-size: 2.0rem;
  }
  .heading-tertiary{
    font-size:1.6em;
  }
}
 /* ***************** */
/* below 544 px(phones)
544/16=34 */
/* ***************** */

@media(max-width:34em){
  grid{
    column-gap: 3.2rem;
    row-gap: 8.0rem;
  }
  .navbar{
    padding: 0 4.8rem;
  }
  .logo-name{
    height: 1.6rem;
    font-size: 2.4rem;
  }

  .section-hero{
    padding: 0 3.2rem 0 3.2rem;
  }
  .hero{
    padding: 0 3.2rem;
    margin-bottom: 3.2rem;
  }
  .hero-description{
    font-size: 1.6rem;
  }
  .heading-primary{
    font-size:  2.0rem; 
    margin-top: 3.2rem;
  }
  .heading-secondary{
    font-size: 1.8rem;
    margin-bottom: 3.2rem;
  }
  .heading-tertiary{
    font-size:1.6em;
  }
  .hero-description{
    margin-bottom: 2.4rem;
  }
  .grid{
    display: grid;
    column-gap: 2.4rem;
    row-gap: 3.2rem;
    
  }
  .primary-button {
    width: 10rem; /* Adjust the width as needed for a smaller button */
    height: 3rem; /* Adjust the height as needed for a smaller button */
    font-size: 1.2rem; /* Adjust the font size for a smaller button */
    font-weight: 500;
    line-height: 1.5rem;
    display: inline-block; /* Adjust the display property as needed */
    text-align: center;
    white-space: normal;
    background-color: #fafafa;
    color: #000;
    border: 0.2rem solid #000; /* Adjust the border size as needed */
    border-radius: 1rem;
    text-decoration: none;
    box-shadow: 0 0.3rem #fc9925; /* Adjust the box shadow as needed */
  }
  .project-description{
    font-size: 1.4rem;
    margin-bottom: 3.2rem;
  }
  .text-box{
    text-align: left;
    padding: 0 3.2rem 0 3.2rem;
  }
  .heading-tertiary{
    font-size: 1.6rem;
  }
  .about-me{
    margin-top: 4.8rem;
  }
  .introduction{
    text-align: left;
    padding: 0 4.8rem 0 4.8rem;
    margin-bottom: 4.8rem;
  }


}




  /* -FONT SIZE (px) 
 10 / 12 / 14 / 16 / 18 / 20 / 24 / 30 / 36 / 44 / 52 / 62 / 74 / 86 / 98 */
  
 /* SPACING SYSTEM (px) 
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128 / 160
 */

